style.css
.position-fixed{
    width: 100vw;
    margin-bottom: 10px;
}
.navbar{
    font-family: 'Lato', sans-serif;
    background-color:#cc7546 ;
}
#navI{
    margin-left: auto;
}
#brand{
    font-family: 'Montserrat Alternates', sans-serif;
}
.starter{
    display: flex;
    background-color: #E7814B;
    height: 45vh;
}
.starter > div, .contain > div {
    width: 70vw;
    margin: auto;
}
.contain{
    display: flex;
    flex-direction: column;
    margin-top: 2em;
}
.skills{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}
svg{
    height:200px;
    margin: 0;
}
.center{
    text-align: center;
    margin-bottom: 10%;
}
.projects{
    display:grid;
    grid-template-columns: [a] 2fr[b] 1fr [c];
}
.grid{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}
a > img {
    height: 100px;
    width: 200px;
    margin: 10px;
}
footer{
    display: flex;
    background-color: #E7814B;
    color: black;
    font-size: 32px;
}
.fa {
    color: white;
}

